--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>iNeuron</title>
+	<title>Gourang Patidar</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<style>
@@ -198,6 +198,7 @@
 <header class="bg-primary text-center py-5 mb-4">
 	<div class="container">
 	  <h1 class="font-weight-light text-white">Sign Language Detection using YOLOv5</h1>
+	  <h3 class="font-weight-light text-white">by Gourang Patidar</h3>
 	</div>
   </header>
   
